--- a/src/components/shared/FormInput/form-input.module.scss
+++ b/src/components/shared/FormInput/form-input.module.scss
@@ -7,7 +7,6 @@
   color: $black-0;
   display: flex;
   flex-direction: column;
-  position: relative;
 }
 
 .wrapper {
@@ -15,6 +14,12 @@
   flex-direction: row;
   gap: 5px;
   margin-bottom: 0.5rem;
+}
+
+.input-wrapper {
+  position: relative;
+  // display: inline-block;  
+  // width: 100%;            
 }
 
 .required {
@@ -53,9 +58,9 @@
 .error-icon {
   position: absolute;
   top: 50%;
-  right: 8px;     
+  right: 8px;
   transform: translateY(-50%);
-  pointer-events: none; 
-  width: 24px; 
+  pointer-events: none;
+  width: 24px;
   height: 24px;
 }
