--- a/src/components/loan/CustomizeCard/customize-card.module.scss
+++ b/src/components/loan/CustomizeCard/customize-card.module.scss
@@ -60,6 +60,10 @@ h4 {
     @extend .customize-card__step;
     margin-bottom: 1.125rem;
   }
+  &__amount-input {
+    outline: 0;
+    border: 0;
+  }
   &__selected-amount {
     @extend .customize-card__step;
   }
