--- a/src/components/loan/CustomizeCard/customize-card.module.scss
+++ b/src/components/loan/CustomizeCard/customize-card.module.scss
@@ -74,11 +74,10 @@ h4 {
     outline: none;
     cursor: pointer;
     appearance: none;
-    -webkit-appearance: none;
+    accent-color: red;
 
     &::-webkit-slider-thumb {
       appearance: none;
-      -webkit-appearance: none;
       width: 24px;
       height: 24px;
       background: #6b38f2;
