--- a/src/components/loan/CustomizeCard/customize-card.module.scss
+++ b/src/components/loan/CustomizeCard/customize-card.module.scss
@@ -151,4 +151,15 @@ h4 {
     border-radius: 8px;
     padding: 1rem 2rem;
   }
+  &__notification{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__error-message{
+    color: $red-1;
+  }
+  &__success-message{
+    color: green;
+  }
 }
